assets/style/stile.css
/* ... */
#back-to-top{
  position: fixed;
  bottom:20px;
  right: 20px;
  display: none; 
  padding: 25px 15px;
  font-size: 18px;
  text-align: center;
  border-radius: 5px;
  text-decoration: none;
  z-index: 1000;
}

#back-to-top:hover{
  background-color: var(--secondary-color);
  border-radius: 30px;
}

.profile-image{

  max-width: 350px;
  height: auto;
  margin-left: 550px;
  animation: radius 8s linear infinite;
    
}

@keyframes radius{
  0%,100%{
    border-radius: 55% 45% 70% 30% / 43% 30% 70% 60%;
  }
  33%{
    border-radius: 40% 60% 40% 60% / 70% 60% 40% 30%;
  }
  66% {
    border-radius: 20% 80% 20% 80% / 50% 45% 55% 50%;
  }
}

.contenitore-p{
  display: flex;
  margin-top: 130px;
  justify-content: space-between;
  align-items: center;
  margin-right: 210px;
}

@media only screen and (min-width: 1024px) and (max-width: 1920px) {
  
  .presentazione{
    margin-left: -150px;
    margin-top: 150px;
  }
  .profile-image {
      max-width: 400px;
      margin-left: 335px;
      margin-bottom: -200px;
  }
  }

@media only screen and (min-width: 2560px) {
  
.presentazione{
  margin-left: 300px;
  margin-top: 150px;
}
.profile-image {
    max-width: 400px;
    margin-left: 750px;
    margin-bottom: -200px;
}
}


@media screen and (max-width: 480px) {
  .contenitore-p {
      flex-direction: column;
      margin-top: 20px;
      margin-right: 0;
      align-items: center;
  }

  .profile-image {
      max-width: 155px;
      margin-left: 0;
  }
  
}

.contenitore-q{
  display: flex;
  margin-top: -497px;
  justify-content: space-between;
  align-items: center;
  margin-left: 980px;
}
.presentazione{

  margin-right: 250px;
}

@media screen and (max-width: 480px) {
  .contenitore-q {
      flex-direction: column;
      margin-top: 20px;
      margin-left: 0;
      align-items: center;
      text-align: center;
  }

  .presentazione {
      margin-right: 0;
      padding: 10px;
  }

  .presentazione h1 {
      font-size: 1.5em;
  }

  .presentazione h2 {
      font-size: 1.2em;
  }

  .presentazione p {
      font-size: 1em;
      padding: 0 10px;
  }
}


h1{
    text-align: center;
    color: var(--primary-color); 
}

h4 {
  font-size: 30px;
  background-color: var(--background-color);
  border: 3px solid var(--primary-color);
  color: var(--primary-color);  
  border-radius: 15px;
  padding: 10px;
  display: inline-block;
  font-family: 'Raleway',sans-serif;
  font-size: 32px;
  margin-bottom: 2px;
}

h3{
  font-size: 24px;
}

h2 {
  font-size: 30px;
  background-color: var(--background-color);
  border: 3px solid var(--primary-color);   
  color: var(--primary-color);
  border-radius: 15px;
  padding: 10px;
  display: inline-block;
  
}

h2, h3{

    font-family:'Playfair+Display',serif ;
}

h5{
  font-size: 20px;
  font-weight: normal;
}


.buttons-container{
  margin-left: 80px;
}
.button-link0, .button-link1{
    
    width: calc(100% - 80px);
    margin: 5px 30px;
    color: #FFF;
    background-color: var(--secondary-color);    
    font-weight: bold;
    padding: 20px;
    text-align: center;
        
    border-radius: 20px;
    cursor: pointer;
    transition: 0.3s;
    text-decoration: none;
    color: var(--primary-color);
    font-size: 22px;
    
}

.button-link0{
  margin-left: 500px;
}
 
.button-link0:hover, .button-link1:hover{

  background-color: var(--primary-color);
  color: var(--secondary-color);

}

.button-link2 {
    
  width: calc(100% - 80px);
  margin: 5px 30px;
  color: #FFF;
  background-color: var(--secondary-color);    
  font-weight: bold;
  padding: 10px 20px;
  text-align: center;
  border: 3px solid var(--primary-color);     
  border-radius: 20px;
  cursor: pointer;
  transition: 0.3s;
  text-decoration: none;
  display:inline-block;
  max-width: 125px;

}

.button-link2:hover{

  background-color: var(--primary-color);
  border: 3px solid var(--secondary-color);
  
}

@media only screen and (min-width: 1024px) and (max-width: 1920px){
  .buttons-container {
      margin-left: 880px;
      display: flex;
      flex-direction: row;
      align-items: flex-start;
      margin-top: 0;
  }

  .button-link0, .button-link1, .button-link2 {
      width: auto;
      margin: 20px;
      font-size: 24px;
  }

  .button-link0 {
      margin-left: 20px;
  }

  .button-link1, .button-link2 {
      margin-left: 0;
  }
}

@media only screen and (min-width: 2560px){
  .buttons-container {
      margin-left: 1330px;
      display: flex;
      flex-direction: row;
      align-items: flex-start;
      margin-top: 0;
  }

  .button-link0, .button-link1, .button-link2 {
      width: auto;
      margin: 20px;
      font-size: 24px;
  }

  .button-link0 {
      margin-left: 20px;
  }

  .button-link1, .button-link2 {
      margin-left: 0;
  }
}

@media (max-width: 480px) {
  .buttons-container {
      margin-left: 0;
      display: flex;
      flex-direction: column;
      align-items: center;
      margin-top: -60px;
  }

  .button-link0, .button-link1 {
      width: 80%;
      margin: 10px 0;
      font-size: 18px;
  }

  .button-link0 {
      margin-left: 0;
  }

  .button-link2 {
      width: 80%;
      margin: 10px 0;
      font-size: 18px;
  }
}
.logo-container{
  padding: 0px;
  margin-bottom: -202px;
  margin-top: -18px;
  margin-right: 1400px;
}

nav ul {
  
    list-style-type: none;
    padding: 35px;
    margin: 0;
    display: flex;
    justify-content:right;
    position: relative;  
    background-color: var(--tertiary-color);
  }
  

nav ul li a {
    text-decoration: none;
    font-weight: 800;
    color: var(--primary-color);
    padding: 10px;
    position: relative;
    background-color: var(--background-color);
    border-radius: 10px;  
    margin: 0;
    margin-left: 10px;
}

nav ul li a:hover {

  background-color: var(--primary-color);
  color: var(--background-color);
  border-radius: 10px;
}

.menu-toggle {
  display: none;
  font-size: 30px;
  background: none;
  border: none;
  color: var(--primary-color);
  cursor: pointer;
}
/* ... */

